// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`should render correctly is mobile 1`] = `
<div>
  <div
    class="common-tools-container"
  >
    <button
      class="button"
      title="Undo"
    >
      <svgr-url />
    </button>
    <button
      class="button"
      title="Redo"
    >
      <svgr-url />
    </button>
  </div>
</div>
`;

exports[`should render correctly not hiding, not mobile and in web version 1`] = `
<div>
  <div
    class="common-tools-container"
  >
    <button
      class="button"
      title="Undo"
    >
      <svgr-url />
    </button>
    <button
      class="button"
      title="Redo"
    >
      <svgr-url />
    </button>
    <button
      class="button"
      title="Delete"
    >
      <svgr-url />
    </button>
  </div>
</div>
`;
